--- a/email_newsletter/Cargo.toml
+++ b/email_newsletter/Cargo.toml
@@ -13,10 +13,15 @@ name = "email_newsletter"
 [dependencies]
 actix-web = "4"
 tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
-serde = { version = "1", features = ["derive"]}
+serde = { version = "1", features = ["derive"] }
 config = "0.13"
 uuid = { version = "1", features = ["v4"] }
 chrono = { version = "0.4.22", default-features = false, features = ["clock"] }
+
+tracing = { version = "0.1", features = ["log"] }
+tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
+tracing-bunyan-formatter = "0.3"
+tracing-log = "0.2.0"
 
 # Using table-like toml syntax to avoid a super-long line!
 [dependencies.sqlx]
@@ -28,8 +33,9 @@ features = [
 	"postgres",
 	"uuid",
 	"chrono",
-	"migrate"
+	"migrate",
 ]
 
 [dev-dependencies]
 reqwest = "0.11"
+once_cell = "1"
