--- a/email_newsletter/Cargo.toml
+++ b/email_newsletter/Cargo.toml
@@ -22,8 +22,9 @@ tracing = { version = "0.1", features = ["log"] }
 tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
 tracing-bunyan-formatter = "0.3"
 tracing-log = "0.2.0"
-secrecy = {version="0.8", features = ["serde"]}
+secrecy = { version = "0.8", features = ["serde"] }
 tracing-actix-web = "0.7"
+serde-aux = "4"
 
 # Using table-like toml syntax to avoid a super-long line!
 [dependencies.sqlx]
